[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Credits.gd" type="Script" id=1]
[ext_resource path="res://scenes/InfoFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/StyleboxFocus.tres" type="StyleBox" id=3]

[node name="Credits" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="CreditsBg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
rect_pivot_offset = Vector2( 30, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.627451 )

[node name="CreditsText" type="RichTextLabel" parent="CreditsBg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -696.138
margin_top = -496.629
margin_right = 763.862
margin_bottom = 317.371
custom_fonts/mono_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[code]Concept and imlementation: Sergey Astanin.

Graphics: Elena Astanina.

Music: Ludum Dare 38 by Abstraction.

Sound FX: alienxx, darkunst, plasterbrain, scott0642, Sound_Explorer, Muska66,
rioforce, Marianne Gagnon, Edoardo Vallariello.

Fonts: monogram by datagoblin, Montague by Typographer Mediengestaltung.
[/code]"
text = "Concept and imlementation: Sergey Astanin.

Graphics: Elena Astanina.

Music: Ludum Dare 38 by Abstraction.

Sound FX: alienxx, darkunst, plasterbrain, scott0642, Sound_Explorer, Muska66,
rioforce, Marianne Gagnon, Edoardo Vallariello.

Fonts: monogram by datagoblin, Montague by Typographer Mediengestaltung.
"

[node name="ResumeButton" type="Button" parent="CreditsBg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.186
margin_top = -180.0
margin_right = 166.814
margin_bottom = -52.0
custom_styles/focus = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Resume"
[connection signal="visibility_changed" from="." to="." method="_on_Credits_visibility_changed"]
